k8s/phase2_local/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:

  annotations:

    argocd.argoproj.io/sync-wave: "0"
  name: gamems
