k8s/phase2_local/mailpit.yml
apiVersion: apps/v1
kind: Deployment
metadata:

  annotations:

    argocd.argoproj.io/sync-wave: "3"
  name: mailpit-deployment
  namespace: gamems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
      - name: mailpit
        image: axllent/mailpit:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8025
        - containerPort: 1025
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:

  annotations:

    argocd.argoproj.io/sync-wave: "3"
  name: mailpit-service
  namespace: gamems
spec:
  type: NodePort
  selector:
    app: mailpit
  ports:
    - name: ui
      protocol: TCP
      port: 8025
      targetPort: 8025
      nodePort: 32025
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
