k8s/phase2_local/user.yml
# ==========================================
# USER SERVICE (Porta 8081)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:

  annotations:

    argocd.argoproj.io/sync-wave: "2"
  name: user-deployment
  namespace: gamems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: user-service:latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
        resources:
          requests: { memory: "256Mi", cpu: "100m" }
          limits: { memory: "512Mi", cpu: "500m" }
---
apiVersion: v1
kind: Service
metadata:

  annotations:

    argocd.argoproj.io/sync-wave: "2"
  name: user-service
  namespace: gamems
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
