k8s/phase2_local/02-ingress.yml
# =============================
# INGRESS
# =============================
# Sfruttiamo Traefik, un controller ingress integrato
# Questo ingress drirotta ogni chiamata a gamems.local
#  alla porta 80 del frontend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamems-ingress
  namespace: gamems
  annotations:

    argocd.argoproj.io/sync-wave: "4"
    # Abilita l'http (se non si vuole forzare https mettere false, ma per ora lo forziamo)
    ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  tls:
  - hosts:
    - gamems.local
    secretName: gamems-tls
  rules:
  - host: gamems.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
